--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Tic Tac Toe</h1>
+    <div class="control-container">
+        <div class="display"></div>
+        <button id="restart-btn" onclick="game.restart()">RESTART</button>
+    </div>
+
+    <div class="game-container">
+        <div class="tic-tac-toe">
+            <div class="game-cell" id="1"></div>
+            <div class="game-cell vertical" id="2"></div>
+            <div class="game-cell" id="3"></div>
+            <div class="game-cell horizontal" id="4"></div>
+            <div class="game-cell horizontal vertical" id="5"></div>
+            <div class="game-cell horizontal" id="6"></div>
+            <div class="game-cell" id="7"></div>
+            <div class="game-cell vertical" id="8"></div>
+            <div class="game-cell" id="9"></div>
+        </div>
+    </div>
 </body>
 </html>
